# rayblazer

./: CMakeLists.txt
engine/: CMakeLists.txt  color.h  hit_result.h  mat4.h  material.cc  material.h  mempool.h  object.h  pbr.h  random.cc  random.h  ray.h  raytracer.cc  raytracer.h  settings.h  sphere.h  threadpool.cpp  threadpool.h  vec3.h
projects/main/: CMakeLists.txt  main.cc
projects/tester/: CMakeLists.txt  tester.cpp
testing/: static_code_analysis_1.txt
